objects/Project_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <inlineHelpText>Sum of Actual Hours for all goals</inlineHelpText>
        <label>Actual Hours</label>
        <summarizedField>Project_Goal__c.Actual_Hours__c</summarizedField>
        <summaryForeignKey>Project_Goal__c.Project_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Budgeted_Hours__c</fullName>
        <inlineHelpText>Sum of Budgeted Hours for all goals related to this project
* Should not exceed Max Hours *</inlineHelpText>
        <label>Budgeted Hours</label>
        <summarizedField>Project_Goal__c.Budgeted_Hours__c</summarizedField>
        <summaryForeignKey>Project_Goal__c.Project_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <formula>AND (TODAY() &gt;=  Start_Date__c, TODAY() &lt;= End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Hours__c</fullName>
        <inlineHelpText>Max Hours in SOW</inlineHelpText>
        <label>Max Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Alert__c</fullName>
        <formula>/* Show alert if Budgeted Hours exceed Max Hours */
IF (Budgeted_Hours__c &gt; Max_Hours__c, IMAGE (&quot;/resource/Flag_Red&quot;, &quot;Flag Red&quot;) + &quot; Exceeding Max Hours by &quot; + TEXT (Budgeted_Hours__c - Max_Hours__c) + &quot; hrs&quot;, 
/* If Actual Hours exceed Budgeted Hours */
IF (Actual_Hours__c &gt; Budgeted_Hours__c, IMAGE (&quot;/resource/Flag_Red&quot;, &quot;Flag Red&quot;) + &quot; Exceeding &quot; + TEXT (Actual_Hours__c - Budgeted_Hours__c) + &quot; hrs&quot;, 
/* If Actual Hours same as Budgeted Hours */
IF (Actual_Hours__c = Budgeted_Hours__c, IMAGE (&quot;/resource/Flag_Green&quot;, &quot;Flag Green&quot;)+ &quot; Remaining 0 hrs&quot;,
/* If Actual Hours are within 10% of Budgeted Hours */
IF ((Budgeted_Hours__c - Actual_Hours__c) &lt;= (Budgeted_Hours__c/10), IMAGE (&quot;/resource/Flag_Yellow&quot;, &quot;Flag Yellow&quot;) + &quot; Remaining &quot; + TEXT (Budgeted_Hours__c - Actual_Hours__c) + &quot; hrs&quot;, 
/* Else Actual Hours are more than 10% of Budgeted Hours */
IMAGE (&quot;/resource/Flag_Green&quot;, &quot;Flag Green&quot;) + &quot; Remaining &quot; + TEXT (Budgeted_Hours__c - Actual_Hours__c) + &quot; hrs&quot;
))
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Red if Budgeted &gt; Max
Red, if Actual &gt;= Budgeted
Yellow, if Actual &lt;= 10% of Budgeted
Green, if Actual &gt; 10% of Budgeted</inlineHelpText>
        <label>Project Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOW_and_PO__c</fullName>
        <label>SOW # &amp; PO #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Project Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Current__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Project_Alert__c</columns>
        <columns>Max_Hours__c</columns>
        <columns>Budgeted_Hours__c</columns>
        <columns>Actual_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>